--- a/JavaFx/src/application/HelloWorld.fxml
+++ b/JavaFx/src/application/HelloWorld.fxml
@@ -5,19 +5,17 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.71">
+<AnchorPane prefHeight="412.0" prefWidth="665.0" xmlns="http://javafx.com/javafx/8.0.71" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HelloWorldController">
    <children>
       <SplitPane dividerPositions="0.29797979797979796" layoutX="76.0" layoutY="40.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-               <children>
-                  <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Novo" />
-               </children>
-            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
                   <TabPane layoutX="48.0" layoutY="25.0" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -27,7 +25,18 @@
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
                                     <Label layoutX="27.0" layoutY="21.0" text="Nome" />
-                                    <TextField layoutX="86.0" layoutY="18.0" />
+                                    <TextField fx:id="tfTexto" layoutX="86.0" layoutY="18.0" />
+                                    <Pane layoutX="4.0" layoutY="208.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="92.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="-4.0" AnchorPane.topAnchor="208.0">
+                                       <children>
+                                          <Button fx:id="btnSalvar" layoutX="38.0" layoutY="124.0" mnemonicParsing="false" onAction="#salvar" text="Salvar" />
+                                          <Button fx:id="btnExcluir" layoutX="153.0" layoutY="124.0" mnemonicParsing="false" onAction="#excluir" text="Excluir" />
+                                       </children></Pane>
+                                    <Label fx:id="lblMsgSalvar" layoutX="34.0" layoutY="71.0" prefHeight="17.0" prefWidth="318.0" />
+                                    <TableView fx:id="tblNomes" layoutX="-7.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.leftAnchor="-7.0" AnchorPane.rightAnchor="7.0">
+                                      <columns>
+                                        <TableColumn fx:id="colNome" prefWidth="416.0" text="Nome" />
+                                      </columns>
+                                    </TableView>
                                  </children>
                               </AnchorPane>
                         </content>
