--- a/JavaFx/src/application/application.css
+++ b/JavaFx/src/application/application.css
@@ -1,4 +1,8 @@
 /* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
-.fundo{
+.msgSalvar{
+	-fx-background-color: blue;
+}
+
+.msgExcluir{
 	-fx-background-color: red;
 }
